...
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recicler_listado_dudas"
                    android:layout_width="match_parent"
                    android:layout_height="667dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="0dp"
                    android:background="@color/transparent"
...
